--- a/html/news.html
+++ b/html/news.html
@@ -19,7 +19,7 @@
     <div>
 
         <!-- 最新消息 -->
-        <div class="browserHeight container">
+        <div class="container">
             <div class="text-center">
                 <h1 class="indexh1 mt-5">WHAT'S NEW.</h1>
                 <h2 class="indexh2 mt-1">最新消息</h2>
@@ -30,44 +30,87 @@
                 <!-- 輪播內容 -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row">
-                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg"
-                                class="height50 col-sm-6" alt="最新消息1">
-                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-                                natus quia amet ut
-                                incidunt perspiciatis, dolorum sed accusamus fugiat at nulla perferendis temporibus
-                                adipisci quas in sequi. Molestiae, impedit assumenda!</p>
+                        <div class="row mt-3">
+                            <img src="../資訊圖庫/A11.jpg" class="height50 col-sm-6" alt="最新消息1">
+                            <div class="col-sm-6">
+                                <h3 class="indexh3">企業遭網路攻擊次數狂增！如何打造最強資安之盾？</h3>
+                                <p class="indexp">
+                                    數位轉型已然企業追求永續成長的必要策略，在全新的商業模式與工作型態中，網路所扮演的角色越來越吃重，企業對連網機制的高度依賴，也同時升高了駭客的攻擊慾望。
+                                    <br />除了持續增強的外部威脅，為了降低資安攻擊對產業帶來的衝擊，多國政府也制定了相關法規，像是台灣證交所近期就發布了「上市上櫃公司資通安全管控指引」，要求上市櫃公司必須配置適當的人力資源與設備，並有完整的資通安全制度與作為。
+                                    <br />對大型企業來說，推動資安的關鍵力量已經從內部 IT 規劃，升級到法遵層級。
+                                </p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row">
-                            <img src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg"
-                                class="height50 col-sm-6" alt="最新消息2">
-                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-                                natus quia amet ut
-                                incidunt perspiciatis, dolorum sed accusamus fugiat at nulla perferendis temporibus
-                                adipisci quas in sequi. Molestiae, impedit assumenda!</p>
+                        <div class="row mt-3">
+                            <img src="../資訊圖庫/A22.jpg" class="height50 col-sm-6" alt="最新消息2">
+                            <div class="col-sm-6">
+                                <h3 class="indexh3">微軟IE瀏覽器終止服務 全球2800萬人還在用。</h3>
+                                <p class="indexp">
+                                    微軟Internet
+                                    Explorer瀏覽器問世27年後，正式終止服務。根據研究機構EarthWeb統計的瀏覽器使用數據，目前IE仍有0.64%市占率，相當於全球2800萬人還在使用。
+                                    <br />微軟終止IE支援服務後，IE仍然可以在搭載較舊版本Windows作業系統的電腦上運行，不過一旦故障就無法修復。
+                                    <br />Windows 10和Windows 11用戶將無法再使用IE，但針對部分無法透過微軟新型瀏覽器Edge載入的內容，可能會提供IE模式進行瀏覽。
+                                    <br />EarthWeb數據顯示，Google
+                                    Chrome在全球瀏覽器市占率高達64.95%，第2名蘋果Safari市占19.01%，第3名微軟Edge市占3.99%。
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row">
-                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg"
-                                class="height50 col-sm-6" alt="最新消息3">
-                            <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-                                natus quia amet ut
-                                incidunt perspiciatis, dolorum sed accusamus fugiat at nulla perferendis temporibus
-                                adipisci quas in sequi. Molestiae, impedit assumenda!</p>
+                        <div class="row mt-3">
+                            <img src="../資訊圖庫/A10.jpg" class="height50 col-sm-6" alt="最新消息3">
+                            <div class="col-sm-6">
+                                <h3 class="indexh3">微軟推出個人版Defender，同時支援Windows、macOS、Android與iPhone裝置。</h3>
+                                <p class="indexp">
+                                    微軟近期發表的Microsoft Defender for individuals個人安全工具，將成為Microsoft 365 Personal（個人版）與
+                                    Family（家用版）的內建功能。
+                                    <br />Microsoft
+                                    Defender提供持續的防毒與防網釣保護，用戶自單一的儀表板就能管理及檢視不同裝置的安全性，也能辨識及檢視系統上諸如Norton或McAfee等既有的安全保護，並把對Windows的支援延伸到macOS、Android與iPhone等裝置上，用戶還可接收即時的安全通知、解決策略或是專家提示。
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row mt-3">
+                            <img src="../資訊圖庫/A20.jpg" class="height50 col-sm-6" alt="最新消息4">
+                            <div class="col-sm-6">
+                                <h3 class="indexh3">PC用戶注意！駭客勒索病毒假冒「Windows Update」更新檔入侵電腦！</h3>
+                                <p class="indexp">
+                                    Magniber 勒索軟體近日再度現身流竄，且這次瞄準的是一般消費者用戶，而非企業用戶，且發動攻擊的範圍遍及全球各地。
+                                    <br />據外媒 BleepingComputer 報導，近日已接獲數起遭勒索病毒 Magniber惡意感染的案例。
+                                    <br />此次Magniber 勒索軟體是利用偽裝成由 Windows 10 作業系統提供的「Windows Update」更新檔名義，並透過如 Warez
+                                    這類專門提供盜版軟體下載的非法網站進行惡意散播。
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row mt-3">
+                            <img src="../資訊圖庫/A17.jpg" class="height50 col-sm-6" alt="最新消息5">
+                            <div class="col-sm-6">
+                                <h3 class="indexh3">思科打造Cisco Security Cloud開放的安全雲端平台。</h3>
+                                <p class="indexp">
+                                    思科公布將建立一個全球雲端交付綜合平台，以確保所有大小、規模的企業安全和連接。思科正打造思科安全雲端（Cisco Security
+                                    Cloud），使其成為開放的平台，保護整個IT生態圈的完整性，避免公有雲的框限。
+                                    <br />思科安全雲端將提供整合體驗，使各地的用戶及設備能安全地連接到任何地方的應用程式和資料。透過統一管理，開放平台將提供大規模的威脅預防、檢測、響應和修復能力。思科也將持續致力實現安全雲端，分享其安全產品組合的創新進展。
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- 幻燈片控制icon -->
-            <div class="height10">
+            <div class="vh-10">
                 <!-- 點選控制 -->
                 <div class="carousel-indicators">
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0" class="active" aria-label="Slide 1"></button>
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="1"></button>
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="2"></button>
+                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="3"></button>
+                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="4"></button>
                 </div>
                 <!-- 左右箭頭 -->
                 <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
@@ -81,21 +124,21 @@
         </div>
 
         <!-- 服務項目 -->
-        <div class="browserHeight container">
-            <div class="text-center">
-                <h2 class="indexh2 mt-5">服務項目</h2>
-                <p class="indexp mt-3 px-30">凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......</p>
+        <div class="container">
+            <div>
+                <h2 class="indexh2 mt-5 text-center">服務項目</h2>
+                <p class="indexp mt-3 px-30">　　凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......</p>
             </div>
 
             <div class="row mt-5">
-                <div class="col-sm-4 card mb-3">
+                <div class="col-xl-4 card py-3">
                     <img class="rounded card-img" src="../資訊圖庫/A22.jpg" alt="1">
-                    <div class="card-img-overlay px-5">
+                    <div class="card-img-overlay">
                         <h3 class="card-title">軟體銷售服務</h3>
                         <p class="card-text">微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card mb-3">
+                <div class="col-xl-4 card py-3">
                     <img class="rounded card-img" src="../資訊圖庫/A10.jpg" alt="2">
                     <div class="card-img-overlay">
                         <h3 class="card-title">雲端銷售服務</h3>
@@ -103,29 +146,29 @@
                             AP及應用。</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card mb-3">
+                <div class="col-xl-4 card py-3">
                     <img class="rounded card-img" src="../資訊圖庫/A01.jpg" alt="3">
                     <div class="card-img-overlay">
                         <h3 class="card-title">系統整合服務</h3>
                         <p class="card-text">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card mb-3">
+                <div class="col-xl-4 card py-3">
                     <img class="rounded card-img" src="../資訊圖庫/A24.jpg" alt="4">
                     <div class="card-img-overlay">
                         <h3 class="card-title">網路規劃服務</h3>
                         <p class="card-text">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card mb-3">
-                    <img class="rounded card-img" src="../資訊圖庫/A21.jpg" alt="5">
+                <div class="col-xl-4 card py-3">
+                    <img class="rounded card-img" src="../資訊圖庫/A11.jpg" alt="5">
                     <div class="card-img-overlay">
                         <h3 class="card-title">資訊安全服務</h3>
                         <p class="card-text">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
                     </div>
                 </div>
-                <div class="col-sm-4 card mb-3">
-                    <img class="rounded card-img" src="../資訊圖庫/A11.jpg" alt="6">
+                <div class="col-xl-4 card py-3">
+                    <img class="rounded card-img" src="../資訊圖庫/A21.jpg" alt="6">
                     <div class="card-img-overlay">
                         <h3 class="card-title">技術維護服務</h3>
                         <p class="card-text">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</p>
@@ -136,75 +179,87 @@
         </div>
 
         <!-- 客戶個案 -->
-        <div class="browserHeight">
-            <div class="text-center container">
-                <h2 class="indexh2 mt-5">客戶個案</h2>
-                <p class="indexp mt-3 px-30"> 凱茂業界深耕多年，具備專業且豐富建置經驗，
+        <div>
+            <div class=" container">
+                <h2 class="indexh2 mt-5 text-center">客戶個案</h2>
+                <p class="indexp mt-3 px-30">　　凱茂業界深耕多年，具備專業且豐富建置經驗，
                     熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
+            <div class="row mt-5 px-3">
+                <div class="col-xl-6 card">
+                    <img class="card-img w-100 m-auto" src="../資訊圖庫/合作夥伴logo/ausu.jpg" alt="1">
+                    <div class="card-img-overlay">
+                        <a href="#">
+                            <h3 class="card-title">華碩案例</h3>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, odio ducimus nobis sapiente porro modi. Error doloribus recusandae reiciendis unde vitae laudantium, eos adipisci omnis soluta rerum atque, voluptas id.</p>     
+                        </a>
+                    </div>                        
+                </div>
+                <div class="col-xl-6 card">
+                    <img class="card-img w-50 m-auto" src="../資訊圖庫/合作夥伴logo/Dell2.svg.png" alt="1">                    
+                    <div class="card-img-overlay">
+                        <a href="#">
+                            <h3 class="card-title">戴爾案例</h3>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus temporibus nisi qui fuga, adipisci enim nam repudiandae beatae laboriosam reiciendis nihil facere hic cumque quo minus, fugit exercitationem accusantium! Placeat?</p>     
+                        </a>
+                    </div>                        
+                </div>
+            </div>
+        </div>
 
-            <div class="frame">
-                <div class="gallery">
-                    <div class="row posterBox">
-                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg" alt="!">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                            vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                            aut
-                            laboriosam fuga vitae!</p>
-                    </div>                   
-                    <div class="posterBox">
-                        <img class="posters " src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg" alt="!">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                            vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                            aut
-                            laboriosam fuga vitae!</p>
-                    </div>
-                    <div class="posterBox">
-                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg" alt="!">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                            vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                            aut
-                            laboriosam fuga vitae!</p>
-                    </div>
-                    <div class="row posterBox">
-                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg" alt="!">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                            vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                            aut
-                            laboriosam fuga vitae!</p>
-                    </div>                   
-                    <div class="posterBox">
-                        <img class="posters " src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg" alt="!">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                            vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                            aut
-                            laboriosam fuga vitae!</p>
-                    </div>
-                    <div class="posterBox">
-                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg" alt="!">
-                        <h4>Heading</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                            vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                            aut
-                            laboriosam fuga vitae!</p>
-                    </div>
+        <!-- 產品資訊 -->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-xl-6">
+                    <h1 class="indexh1">OUR<br />PRODUCT</h1>
+                    <h2 class="indexh2">產品資訊</h2>
+                    <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                </div>
+                
+                <div class="col-xl-6">
+                    <iframe class="show100" src="https://www.youtube.com/embed/sr_VSS_gnGE" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+        </div>
+        <!-- 合作廠商產品列表 -->
+        <div class="vw-100">
+            <div class="gallery">
+                
+                <div class="posterBox">
+                    <img class="posters " src="../資訊圖庫/A22.jpg"
+                        alt="!">
+                    <h4>Heading</h4>
+                    <p >產品產品產品產品產品產品產品產品產品產品產品產品</p>
+                </div>
+                <div class="posterBox">
+                    <img class="posters " src="../資訊圖庫/A12.jpg" alt="!">
+                    <h4>Heading</h4>
+                    <p>產品產品產品產品產品產品產品產品產品產品產品產品</p>
+                </div>
+                <div class="posterBox">
+                    <img class="posters " src="../資訊圖庫/A20.jpg" alt="!">
+                    <h4>Heading</h4>
+                    <p>產品產品產品產品產品產品產品產品產品產品產品產品</p>
+                </div>
+                <div class="posterBox">
+                    <img class="posters " src="../資訊圖庫/A11.jpg"
+                        alt="!">
+                    <h4>Heading</h4>
+                    <p>產品產品產品產品產品產品產品產品產品產品產品產品</p>
+                </div>
+                <div class="posterBox">
+                    <img class="posters " src="../資訊圖庫/A17.jpg" alt="!">
+                    <h4>Heading</h4>
+                    <p>產品產品產品產品產品產品產品產品產品產品產品產品</p>
+                </div>
+                <div class="posterBox">
+                    <img class="posters " src="../資訊圖庫/A19.jpg" alt="!">
+                    <h4>Heading</h4>
+                    <p>產品產品產品產品產品產品產品產品產品產品產品產品</p>
                 </div>
             </div>
         </div>
@@ -233,7 +288,7 @@
         var gallery = document.querySelector(".gallery");
         gallery.addEventListener("wheel", (event) => {
             event.preventDefault;
-            gallery.scrollLeft += (event.deltaY)*3 ;
+            gallery.scrollLeft += (event.deltaY) * 3;
         });
     </script>
 </body>
