--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <!-- 服務項目 -->
-        <div class="container-fluid" style="background-color: #ffffff; background-size: cover;">
+        <div class="container-fluid" style="background-color: #ffffff; background-size: cover; padding-bottom: 80px;">
         <div class="container" style="margin-top:1200px">
             <div class="row">
                 <div class="col-lg-6">
@@ -137,7 +137,7 @@
         </div>
 
         <!-- 最新消息 -->
-        <div class="container-fluid" style="background-color: #f3f3f3; padding-bottom:100px">
+        <div class="container-fluid" style="background-color: #f3f3f3; padding-bottom:100px;" >
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 d-flex" style="background-color:#f3f3f3; height:400px; margin-top: 100px">
